Modified z-index of bottom contents to prevent overlap

--- a/css/main.css
+++ b/css/main.css
@@ -388,6 +388,10 @@ a.image {
     display: none;
 }
 
+#bottom {
+    z-index: 5;
+}
+
 
 
 /*----- ANIMATIONS/TRANSITIONS/MOTIONS -----*/
